# gene_locus_identification

./: .python-version  README.md  pyproject.toml
data/: chimpanzee_five_prime.csv  chimpanzee_orthologues.lst  chimpanzee_three_prime.csv  human_five_prime.csv  human_orthologues.csv  human_three_prime.csv  rabbit_five_prime.lst  rabbit_orthologues.csv  rabbit_three_prime.csv
docs/: first_tests.md
gene_locus_identification/: fetch_gene_by_region_External_package.py  fetch_gene_seq.py
tests/: test_gene_locus_identification.py
