[tool.poetry]
name = "gene_locus_identification"
version = "0.1.0"
description = ""
authors = ["William Dimitrios Paraschas <dimitrios@ebi.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
